--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
 <head>
     <script src="/bundle.js"></script>
     <link rel="stylesheet" href="./main.css">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="./assets/manifest.json">
+    <link rel="shortcut icon" href="./assets/favicon.ico">
 </head>
 
 <body>
