--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
 
 <head>
     <script src="/bundle.js"></script>
+    <link rel="stylesheet" href=http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css>
+    <link href="https://fonts.googleapis.com/css?family=Advent+Pro:300,400" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./queries.css">
     <!-- <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="./assets/manifest.json">
     <link rel="shortcut icon" href="./assets/favicon.ico"> -->
